--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <jackson.version>2.3.1</jackson.version>
     <swagger.version>1.3.2</swagger.version>
+    <handlebars.version>1.2.1</handlebars.version>
   </properties>
 
   <scm>
@@ -103,7 +104,12 @@
       <dependency>
         <groupId>com.github.jknack</groupId>
         <artifactId>handlebars</artifactId>
-        <version>1.2.1</version>
+        <version>${handlebars.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.jknack</groupId>
+        <artifactId>handlebars-jackson2</artifactId>
+        <version>${handlebars.version}</version>
       </dependency>
       <dependency>
         <groupId>com.wordnik</groupId>
